Microservices/online-boutique/ingress/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"    
spec:
  rules:
  - host: "gkeapps-dev.<dns-internal-name>"
    http:
      paths:
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: frontend
            port:
              number: 80
